Update en.json (POEditor.com)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,4 @@
 {
-  "technicalWorkshop.title": "Technical Workshop",
-  "technicalWorkshop.frontend.title": "Frontend ticket"
+    "technicalWorkshop.title": "Technical Workshop",
+    "technicalWorkshop.frontend.title": "Backend tickets"
 }
