Update en.json (POEditor.com)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,5 @@
 {
     "technicalWorkshop.title": "Technical Workshop",
-    "technicalWorkshop.frontend.title": "Backend tickets"
+    "technicalWorkshop.frontend.title": "Backend tickets",
+    "technicalWorkshop.footer.title": "The Ultimate Translated Footer"
 }
