--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,5 +1,6 @@
 {
-    "technicalWorkshop.title": "Technical Workshop",
-    "technicalWorkshop.frontend.title": "Backend tickets",
-    "technicalWorkshop.footer.title": "The Ultimate Translated Footer"
+  "technicalWorkshop.title": "Technical Workshop",
+  "technicalWorkshop.frontend.title": "Backend tickets",
+  "technicalWorkshop.footer.title": "The Ultimate Translated Footer",
+  "webhook.pull.new.terms": ""
 }
