--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,6 +1,6 @@
 {
-  "technicalWorkshop.title": "Technical Workshop",
-  "technicalWorkshop.frontend.title": "Backend tickets",
-  "technicalWorkshop.footer.title": "The Ultimate Translated Footer",
-  "webhook.pull.new.terms": ""
+    "technicalWorkshop.title": "Technical Workshop",
+    "technicalWorkshop.frontend.title": "Backend tickets",
+    "technicalWorkshop.footer.title": "The Ultimate Translated Footer",
+    "webhook.pull.new.terms": "Boom ! It worked when I accessed the link"
 }
